feat(categories): add get endpoints
